--- a/web/application/templates/context.html
+++ b/web/application/templates/context.html
@@ -11,7 +11,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/context.css') }}">
-    <!-- <link rel="icon" type="" href="{{ url_for('static', filename='images/favicon.jpg') }}"> -->
+    <link rel="icon" type="" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <title>France Energie - Prédictions DPE et Consomation</title>
 </head>
 
@@ -28,8 +28,9 @@
                     <img src="{{ url_for('static', filename='images/enedis.png') }}" alt="">
                     <div class="text">
                         <h1>Contexte</h1>
-                        <p>GreenTech Solutions est une société de service fictive qui développe des applications. Avec l’accélération du changement climatique et la hausse des prix de l’énergie, la sobriété énergétique est au cœur des préoccupations des Français.</p>
-                        <p>C’est pourquoi Enedis nous sollicite en vue d’évaluer l’impact de la classe de Diagnostic de Performance Energétique (DPE) sur les consommations électriques de logements. Vous devez créer une application qui permet à des particuliers d’évaluer le DPE d’un logement et la consommation d’énergie.</p>
+                        <p>Dans un contexte d'accélération du changement climatique et de hausse continue des prix de l'énergie, la sobriété énergétique est devenue une préoccupation majeure pour les Français. La performance énergétique des logements joue un rôle central dans cette problématique.</p>
+                        <p>Le Diagnostic de Performance Énergétique (DPE) permet d'évaluer la consommation d'énergie et l'impact environnemental d'un logement. Cependant, il reste difficile pour de nombreux particuliers de comprendre concrètement ce que représente leur classe énergétique en termes de consommation réelle et de coûts.</p>
+                        <p>C'est dans ce contexte qu'Enedis nous sollicite pour développer une solution permettant aux particuliers d'évaluer facilement le DPE de leur logement et d'estimer leur consommation énergétique, afin de les accompagner vers une meilleure maîtrise de leur consommation d'énergie.</p>
                     </div>
                 </div>
                 <div class="shortcuts">
