--- a/web/application/templates/elements/menu.html
+++ b/web/application/templates/elements/menu.html
@@ -17,7 +17,7 @@
         <li class="{% if current_page == 'statistics' %}active{% endif %}">
             <a href="/statistics">
                 <img src="{{ url_for('static', filename='images/statistics.svg') }}" alt="statistics icon" height="28px">
-                <p>Satistiques</p>
+                <p>Statistiques</p>
                 <div class="highlighter"></div>
             </a>
         </li>
@@ -38,7 +38,7 @@
         <li>
             <a href="https://github.com/marinoo3/m2_enedis">
                 <img src="{{ url_for('static', filename='images/info.svg') }}" alt="about icon" height="28px">
-                <p>A propos</p>
+                <p>À propos</p>
                 <div class="highlighter"></div>
             </a>
         </li>
