--- a/web/application/templates/map.html
+++ b/web/application/templates/map.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/map.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/table.css') }}">
-    <!-- <link rel="icon" type="" href="{{ url_for('static', filename='images/favicon.jpg') }}"> -->
+    <link rel="icon" type="" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <title>France Energie - Carte interactive</title>
 </head>
 
