--- a/web/application/templates/statistics.html
+++ b/web/application/templates/statistics.html
@@ -9,7 +9,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/statistics.css') }}">
-    <!-- <link rel="icon" type="" href="{{ url_for('static', filename='images/favicon.jpg') }}"> -->
+    <link rel="icon" type="" href="{{ url_for('static', filename='images/favicon.ico') }}">
     <title>France Energie - Statistique Dashboard</title>
 </head>
 
