--- a/web/application/templates/predict.html
+++ b/web/application/templates/predict.html
@@ -95,6 +95,7 @@
                         <h2>Etiquette DPE</h2>
                         <label for="">Votre logement est-il une passoire énergétique ? Le diagnostic de performance énergétique permet d'estimer la consommation d'un logement. Les scores F et G sont considérés comme passoires énergétiques.</label>
                         <div class="container">
+                            <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
                             <ul class="etiquettes">
                                 <li class="non-passoire"><img src="{{ url_for('static', filename='images/etiquette_A.svg') }}" alt="" height="40px"></li>
                                 <li class="non-passoire"><img src="{{ url_for('static', filename='images/etiquette_B.svg') }}" alt="" height="40px"></li>
@@ -114,6 +115,7 @@
                         <h2>Consomation de chauffage</h2>
                         <label for="">À combien s'élève l'estimation de votre consommation de chauffage annuelle en kWh ?</label>
                         <div class="container">
+                            <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
                             <p class="euro">--</p>
                             <p>kwh</p>
                         </div>
