--- a/web/application/static/css/main.css
+++ b/web/application/static/css/main.css
@@ -20,6 +20,7 @@
     --input-bg-color: #f2f2f2;
     --border-color: #dcdcdc;
     --good: #d4f5e7;
+    --neutral: #f5f1d4;
     --bad: #fee9e8;
 }
 
