--- a/web/application/static/css/predict.css
+++ b/web/application/static/css/predict.css
@@ -56,7 +56,7 @@ h2 {
             img {
                 margin-left: -100%;
                 opacity: .2;
-                transition: margin .5s ease;
+                transition: margin 0s;
                 filter: saturate(0);
             }
         }
@@ -64,7 +64,7 @@ h2 {
         .is-passoire {
 
             opacity: 0;
-            transition: opacity .5s ease;
+            transition: opacity 0s;
 
             p {
                 display: none;
@@ -78,10 +78,12 @@ h2 {
 
         .etiquettes li img {
             margin-left: 0;
+            transition: margin .5s ease;
         }
 
         .is-passoire {
             opacity: 1;
+            transition: opacity .5s ease;
         }
     }
 
