Fixed `type_energie_principale_chauffage` options list

--- a/web/application/templates/api-documentation.html
+++ b/web/application/templates/api-documentation.html
@@ -96,14 +96,20 @@
                                     <label>{string} - Le type d'énergie utilisé pour le chauffage
                                         <br>Valeurs possibles : 
                                         <ul class="value-list">
-                                            <li>Bois – Bûches, Bois – Granulés (pellets) ou briquettes</li>
+                                            <li>Bois – Bûches</li>
+                                            <li>Bois – Granulés (pellets) ou briquettes</li>
                                             <li>Bois – Plaquettes d’industrie</li>
                                             <li>Bois – Plaquettes forestières</li>
-                                            <li>Butane, Charbon</li>
+                                            <li>Butane</li>
+                                            <li>Charbon</li>
                                             <li>Fioul domestique</li>
-                                            <li>GPL, Propane</li>
+                                            <li>Gaz naturel</li>
+                                            <li>GPL</li>
+                                            <li>Propane</li>
                                             <li>Réseau de Chauffage urbain</li>
                                             <li>Réseau de Froid Urbain</li>
+                                            <li>Électricité</li>
+                                            <li>Électricité d'origine renouvelable utilisée dans le bâtiment</li>
                                         </ul>
                                     </label>
                                 </li>
@@ -185,14 +191,20 @@
                                     <label>{string} - Le type d'énergie utilisé pour le chauffage
                                         <br>Valeurs possibles : 
                                         <ul class="value-list">
-                                            <li>Bois – Bûches, Bois – Granulés (pellets) ou briquettes</li>
+                                            <li>Bois – Bûches</li>
+                                            <li>Bois – Granulés (pellets) ou briquettes</li>
                                             <li>Bois – Plaquettes d’industrie</li>
                                             <li>Bois – Plaquettes forestières</li>
-                                            <li>Butane, Charbon</li>
+                                            <li>Butane</li>
+                                            <li>Charbon</li>
                                             <li>Fioul domestique</li>
-                                            <li>GPL, Propane</li>
+                                            <li>Gaz naturel</li>
+                                            <li>GPL</li>
+                                            <li>Propane</li>
                                             <li>Réseau de Chauffage urbain</li>
                                             <li>Réseau de Froid Urbain</li>
+                                            <li>Électricité</li>
+                                            <li>Électricité d'origine renouvelable utilisée dans le bâtiment</li>
                                         </ul>
                                     </label>
                                 </li>
@@ -359,10 +371,13 @@ response <- GET(
                                     <option value="Butane">Butane</option>
                                     <option value="Charbon">Charbon</option>
                                     <option value="Fioul domestique">Fioul domestique</option>
+                                    <option value="Gaz naturel">Gaz naturel</option>
                                     <option value="GPL">GPL</option>
                                     <option value="Propane">Propane</option>
                                     <option value="Réseau de Chauffage urbain">Réseau de Chauffage urbain</option>
                                     <option value="Réseau de Froid Urbain">Réseau de Froid Urbain</option>
+                                    <option value="Électricité">Électricité</option>
+                                    <option value="Électricité">Électricité d'origine renouvelable utilisée dans le bâtiment</option>
                                 </select>
                             </div>
                             <div class="input-group">
@@ -436,10 +451,13 @@ response <- GET(
                                     <option value="Butane">Butane</option>
                                     <option value="Charbon">Charbon</option>
                                     <option value="Fioul domestique">Fioul domestique</option>
+                                    <option value="Gaz naturel">Gaz naturel</option>
                                     <option value="GPL">GPL</option>
                                     <option value="Propane">Propane</option>
                                     <option value="Réseau de Chauffage urbain">Réseau de Chauffage urbain</option>
                                     <option value="Réseau de Froid Urbain">Réseau de Froid Urbain</option>
+                                    <option value="Électricité">Électricité</option>
+                                    <option value="Électricité">Électricité d'origine renouvelable utilisée dans le bâtiment</option>
                                 </select>
                             </div>
                             <div class="input-group">
