--- a/web/application/templates/predict.html
+++ b/web/application/templates/predict.html
@@ -63,10 +63,13 @@
                                     <option value="Butane">Butane</option>
                                     <option value="Charbon">Charbon</option>
                                     <option value="Fioul domestique">Fioul domestique</option>
+                                    <option value="Gaz naturel">Gaz naturel</option>
                                     <option value="GPL">GPL</option>
                                     <option value="Propane">Propane</option>
                                     <option value="Réseau de Chauffage urbain">Réseau de Chauffage urbain</option>
                                     <option value="Réseau de Froid Urbain">Réseau de Froid Urbain</option>
+                                    <option value="Électricité">Électricité</option>
+                                    <option value="Électricité">Électricité d'origine renouvelable utilisée dans le bâtiment</option>
                                 </select>
                             </div>
                             <div class="form-input">
